# RSI-calculator

./: .gitignore  README.md  docker-compose.yml  ingest.py
dashboard/: README.md  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: DataDisplay.tsx  Footer.tsx  Navbar.tsx  PriceChart.tsx  RSIChart.tsx  ThemeToggle.tsx  TokenSelector.tsx
dashboard/src/services/: dataService.ts
dashboard/src/types/: index.ts
rsi-calculator/: Cargo.toml
rsi-calculator/.cargo/: config.toml
rsi-calculator/src/: main.rs
scripts/: README.md  README.ps1  run-dashboard.ps1  run-docker.ps1  run-rust.ps1  run.bat  setup-all.ps1  stop-docker.ps1
